2005-08-31  Francois Dumont  <dums@stlport...>

	* build/Makefiles/nmake: Enhance nmake build system to correctly take
	into account the .manifest files generated by VS 2005 Beta.

2005-08-29  Petr Ovtchenkov  <complement@users.sourceforge.net>

	* CVS repository: CVS repository master copied from cvs.stlport.com to SourceForge.
	All history preserved!

2005-08-27  Francois Dumont  <dums@stlport...>

	* stlport/stl/_hashtable.h: Fix move feature integration for the hash_multimap
	container.

	* stlport/stl/_deque.h: Fix _Deque_base move constructor implementation.

	* test/unit/mvctor_test.cpp: Change move constructor tests to use dynamically
	allocated string rather than static ones.

	* build/test/unit/nmake-vc6.mak: Increase compiler maximum heap size to allow
	compilation with stldbg rules.

	* build/test/unit/nmake-evc4.mak: Fix macro typo OPT_STLDBG_STATIC -> 
	OPT_STATIC_STLDBG

	* build/Makefiles/gmake/gcc.mak: Filter out the newly added -fuse-cxa-atexit
	compilation option for Cygwin and Mingw, the granted libc is not compatible
	with it.

2005-08-26  Petr Ovtchenkov  <ptr@island...>

	* stlport/config/stl_solaris.h: C++ comments replaced by C ones,
	this file may be included by C sources. Thanks Matti Rintala.

2005-08-25  Francois Dumont  <dums@stlport...>

	* stlport/stl/_config.h, _epilog.h: Move of stlport namespace alias
	definition from _epilog.h to _config.h to avoid redefinition as _epilog.h
	is reentrant. This is a workaround for a HPUX aCC compiler bug reported
	by Baker.

2005-08-25  Petr Ovtchenkov  <ptr@island...>

	* build/Makefiles/gmake/gcc.mak: usage of -fuse-cxa-atexit strongly
	required for correct order of static objects dtors calls. This is
	used in deinitialization of locale-related objects. Thanks Matti Rintala.

	* stlport/stl/_config.h: use different namespaces for mulithreaded
	and non-multithreaded builds to avoid usage of non-multithreaded
	application with multithreaded libstlport and vice versa;