@@ -55,7 +55,9 @@ struct __move_traits {
    * copy constructor is just fine. Most of the time the copy constructor is fine only
    * if the following info is true.
    */
-#if defined(_STLP_USE_PARTIAL_SPEC_WORKAROUND) && !defined(_STLP_CLASS_PARTIAL_SPECIALIZATION)
+#if defined (_STLP_USE_PARTIAL_SPEC_WORKAROUND) && \
+   !defined (_STLP_CLASS_PARTIAL_SPECIALIZATION) && \
+   !defined (_STLP_NO_MOVE_SEMANTIC)
   typedef typename _IsSTLportClass<_Tp>::_Ret implemented;
 #else
   typedef __false_type implemented;
